--- a/ramulator2/src/translation/CMakeLists.txt
+++ b/ramulator2/src/translation/CMakeLists.txt
@@ -1,15 +1,3 @@
-add_library(ramulator-translation OBJECT)
-
-target_sources(
-  ramulator-translation PRIVATE
-  translation.h
-
-  impl/no_translation.cpp
-  impl/random_translation.cpp
-)
-
-target_link_libraries(
-  ramulator
-  PRIVATE
-  ramulator-translation
-)
+version https://git-lfs.github.com/spec/v1
+oid sha256:48f81876a0296e68c97365e92d9d0fe4df80ca0ef5207e234be9de309cbe76e5
+size 251
